<resources>
    <string name="app_name">MODEVT FINALS</string>
    <string name="title">A L G O R I T H M S</string>
    <string name="desc">Test out your knowledge on Data Structures and Algorithms</string>
    <string name="btn_start">Start</string>
    <string name="diff_str">Select a difficulty.</string>
    <string name="diff_easy">Easy</string>
    <string name="diff_mid">Medium</string>
    <string name="diff_hard">Hard</string>
    <string name="diff_rand">Random</string>
    <string name="placeholder">Algorithms Quiz</string>
    <string name="nextQ">Next Question</string>
    <string name="submit">Submit</string>
    <string name="answer">Answer here!</string>
    <string name="question">Question</string>
    <string name="reset">Try Again?</string>
    <string name="share">Share your score</string>
    <string name="congrats">Congratulations!\nYour score is...</string>
    <string name="score_placeholder">score</string>

</resources>