<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/easyLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".EasyRoundActivity">

    <TextView
        android:id="@+id/txtQuestion"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:fontFamily="@font/inter_regular"
        android:singleLine="false"
        android:text="@string/placeholder"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="249dp"
        android:layout_height="79dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/answerInput"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/answer"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnNext"
        style="@style/btn_settings"
        android:layout_width="185dp"
        android:layout_height="49dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/custom_btn_start"
        android:text="@string/nextQ"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        style="@style/btn_settings"
        android:layout_width="124dp"
        android:layout_height="46dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/custom_btn_next"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="57dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729"
        app:srcCompat="@drawable/ic_prog" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/question"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        />

</androidx.constraintlayout.widget.ConstraintLayout>