<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".EndActivity"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="17dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/congrats"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/score_placeholder"
        android:textColor="@android:color/background_dark"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRestart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRestart"
        style="@style/btn_settings"
        android:layout_width="198dp"
        android:layout_height="56dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/custom_btn_end"
        android:text="@string/reset"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnShare"
        style="@style/btn_settings"
        android:layout_width="230dp"
        android:layout_height="56dp"
        android:layout_marginBottom="164dp"
        android:background="@drawable/custom_btn_next"
        android:text="@string/share"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="99dp"
        android:layout_height="114dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692"
        app:srcCompat="@drawable/ic_congrats" />
</androidx.constraintlayout.widget.ConstraintLayout>