<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    android:id="@+id/homeLayout"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/algoLogo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865"
        android:transitionName="logo_transition"/>

    <TextView
        android:id="@+id/tag"
        android:layout_width="187dp"
        android:layout_height="27dp"
        android:layout_marginBottom="44dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/mainTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="217dp"
        android:layout_height="43dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/desc"
        android:textAlignment="center"
        android:textColor="#5C5C5C"
        android:textFontWeight="200"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="120dp"
        android:layout_height="50sp"
        android:layout_marginBottom="256dp"
        android:background="@drawable/custom_btn_start"
        android:text="@string/btn_start"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>